--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/smoothie.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="description" content="Get Ready For A New View on Drums">
+  <meta name="author" content="862425609">
 
   <title>Zachary Miyasato - Drumming Lessons</title>
 
